@startuml Smart_wallet


skinparam classAttributeIconSize 0

abstract class Users {
    +String name
    
    -int age
}

class transfer
{
- int amount 
-string description
-int category
-

}

class Incomes {
    #int amount
    +Date incomeDate
}

class Expenses {
    #int amount
    +Date expenseDate
}

class Database {
    -String host
    -String dbName
    -String username
    -String password
    +getconnection()
}

Users -- Cards
Cards -- Incomes
Cards -- Expenses

@enduml
